testdata/baselines/reference/submodule/conformance/moduleExportAssignment3.errors.txt
npm.js(1,11): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== npm.js (1 errors) ====
    var mod = require('./mod')
              ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    mod() // should be callable from here too
    
==== mod.js (0 errors) ====
    module.exports = function x() { }
    module.exports() // should be callable
    